--- a/androidx-app/src/main/res/layout/activity_test.xml
+++ b/androidx-app/src/main/res/layout/activity_test.xml
@@ -14,20 +14,8 @@
         android:textSize="@dimen/_20sp" />
 
     <Button
-        android:id="@+id/btn_goto_main"
-        android:text="打开干货网接口页面MainActivity(测试接口错误）"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/btn_test_main_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="打开测试MainFragment" />
-
-    <Button
         android:id="@+id/btn_goto_wan_android"
-        android:text="打开玩安卓接口页面MainActivity"
+        android:text="打开WanAndroidActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_50dp" />
