--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -33,4 +33,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10dp"
         android:text="打开LazyLoadActivity" />
+
+    <Button
+        android:id="@+id/btn_vp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10dp"
+        android:text="打开ViewPagerActivity" />
 </LinearLayout>
